src/components/PolandMap/PolandMap.scss
.poland-map--container{
  position: absolute;
    right: 0;
    bottom: 74px;
    width: 50%;
    float: right;
    margin-top: -155px;
    margin-right: 162px;
    svg{
        width: 650px;
        margin-left: 150px;
        height: 500px;
    }
    .background{
        fill: transparent;
        stroke: transparent;
    }
    g path{
        fill: #fff;
    }
    .filled path{
      fill: #5498dc;
    }
    .filled-whole path{
      fill: #191970;
    }
    
}
.to-render--background-image{
    height: 700px;
    width: 650px;
    position: absolute;
    object-fit: cover;
    top: 0;
    left: 0;
    z-index: -1;
  }
  .to-render--background-image img{
    object-fit: cover;
    z-index: -1;
  }
  .to-render--header{
    z-index: 2;
    color: white;
    text-shadow: 3px 2px 3px rgba(255,255,255,.2), 2px 2px 2px rgba(0,0,0,0.59);
    font-size: 62px;
    max-width: 845px;
    text-align: left;
    margin-bottom: 0;
    padding-left: 50px;
  }
  .to-render--header-wojewodztwo{
    z-index: 2;
    color: white;
    text-shadow: 3px 2px 3px rgba(255,255,255,.2), 2px 2px 2px rgba(0,0,0,0.59);
    font-size: 56px;
    max-width: 700px;
    text-align: left;
    padding-left: 50px;
    margin-top: 0;
  }
  

